2016-05-04  SilverNexus
	* main.c: Change the loop for performing each root search to a do-while loop.
	* parseArgs.c: Refactor the required argument value check to a macro.
	  Refactored the numeric value check for -l and -p to use fewer cycles.

2016-05-03  SilverNexus
	* main.c: Fixed the initial argument quantity check to account for the
	  flagless search string as a parameter.
	* fileperuser_search.c: Only compile memmem equivalent when we have mmap.
	* fileperuser_search.h: Only define memmem equivalent when we have mmap.

2016-05-02  SilverNexus
	* parseArgs.c: Refactored the search string to not use a flag.
	  Updated the help message to convey the change in argument syntax.
	  Current design should allow for it to still be inserted between option flags.
	* README: Updated the usage information to relect the adjusted argument syntax.
	* doc/fileperuser.man: Created man page for fileperuser.
	* doc/Makefile.am: Set up for a makefile to install the manpage.
	* Makefile.am: Indicate that doc has another Makefile.am in it.
	* configure.ac: Make sure that doc/Makefile is produced.

2016-05-01  SilverNexus
	* ErrorLog.c: Changed the month and error titles to be const char * const
	  instead of const char *. This allows for slightly more aggressive optimization.
	* fileperuser_search.c: Remove parameter pass of jump table in favor of direct
	  access from jump_table.h.
	  Also removed extraneous check from case insensitive search.
	* fileperuser_search.h: Remove jump table parameter from the function prototypes.
	* search.c: Don't pass the jump table anymore, either.
	* settings.h: Don't have the function pointer use the jump table parameter slot.

2016-04-30  SilverNexus
	* jump_table.c: Changed the jump table to be stack allocated.
	  Removed implementation of initialization and cleanup, since no longer
	  dynamically allocated.
	* jump_table.h: Changed the extern declaration to match the new jump table.