@@ -2,6 +2,7 @@
 	* main.c: Change the loop for performing each root search to a do-while loop.
 	* parseArgs.c: Refactor the required argument value check to a macro.
 	  Refactored the numeric value check for -l and -p to use fewer cycles.
+	* search.c: Refactor duplicated file search code to use a macro.
 
 2016-05-03  SilverNexus
 	* main.c: Fixed the initial argument quantity check to account for the
